fix: ui dark wrong colors

--- a/src/styles/pages/registry.css
+++ b/src/styles/pages/registry.css
@@ -6,7 +6,8 @@
 }
 
 .registry .member-card {
-  @apply flex w-full flex-col space-y-3 rounded-xl bg-lightest p-3 shadow dark:bg-white/5 lg:flex-row lg:space-y-0;
+  @apply flex w-full flex-col space-y-3 rounded-xl 
+  bg-lightest p-3 shadow dark:bg-dark lg:flex-row lg:space-y-0;
 }
 
 .registry .member-card button.action {
